<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
        <Button
            android:id="@+id/timerButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="60sp"
            android:text="00:00"
            android:layout_weight="1"
            android:onClick="mainButtonClick"
            android:background="@drawable/custom_button"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:id="@+id/poseDecrementButton"
                android:onClick="posesLeftDecrementClick"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/posesLeftText"
                android:layout_weight="1"
                android:text="1"
                android:gravity="center_horizontal" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:id="@+id/poseIncrementButton"
                android:onClick="posesLeftIncrementClick"/>
        </LinearLayout>

        <android.support.v7.widget.GridLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:id="@+id/choice_grid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"

            grid:alignmentMode="alignBounds"
            grid:columnCount="4"
            grid:rowOrderPreserved="false"
            grid:useDefaultMargins="false">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/time_30s"
                android:id="@+id/button30s"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_1m"
                android:id="@+id/button1m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_2m"
                android:id="@+id/button2m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_3m"
                android:id="@+id/button3m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_5m"
                android:id="@+id/button5m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_7m"
                android:id="@+id/button7m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_10m"
                android:id="@+id/button10m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_15m"
                android:id="@+id/button15m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_20m"
                android:id="@+id/button20m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_25m"
                android:id="@+id/button25m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_30m"
                android:id="@+id/button30m"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
            <Button
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:text="@string/time_Custom"
                android:id="@+id/buttonCustom"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
                android:textSize="15sp"
                android:onClick="timeButtonClick"/>
        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</FrameLayout>
